# reaper-csurf-us2400

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ruxton_Tascam_US-2400.ext
OLED Display/: sketch_jul1.ino
OLED Display/Arduino/: sketch_jul1.ino
OLED Display/Arduino/libraries/Multi_BitBang/src/: Multi_BitBang.cpp
OLED Display/Arduino/libraries/Multi_OLED/src/: Multi_OLED.cpp
Source/jmde/csurf/: CSurf_US2400_stripoverlay.cpp  CSurf_US2400_stripoverlay.h  csurf_us2400.cpp  csurf_us2400.h  csurf_us2400_helpoverlay.cpp  csurf_us2400_helpoverlay.h  csurf_utils.cpp  csurf_utils.h  res.aps  res.rc  resource.h
cmake/: FindPHP.cmake  FindSWELL.cmake  linux-cross.cmake
old projects/: reaper_csurf.sln  reaper_csurf.vcproj  reaper_csurf.vcxproj
paramMaps/: paramMap_DYN4000 Mono (OverToneDSP).txt  paramMap_SSL EV2 Channel Mono (Waves).txt  paramMap_SSL Native Channel Strip 2 (SSL).txt  paramMap_SSLChannel Mono (Waves).txt  paramMap_SSLChannel Stereo (Waves).txt  paramMap_SSLGChannel Stereo (Waves).txt  paramMap_StonEQ 4k (Sonimus).txt  paramMap_bx_console SSL 4000 E (Plugin Alliance).txt  paramMap_bx_console SSL 4000 G (Plugin Alliance).txt  paramMap_bx_console SSL 9000 J (Plugin Alliance).txt
source/: CMakeLists.txt  CSurf_US2400_stripoverlay.cpp  CSurf_US2400_stripoverlay.h  csurf.h  csurf_main.cpp  csurf_us2400.cpp  csurf_us2400.h  csurf_us2400_helpoverlay.cpp  csurf_us2400_helpoverlay.h  csurf_utils.cpp  csurf_utils.h  res.aps  res.rc  res.rc_mac_dlg  resource.h  us2400.h
